# Flint

./: .gitignore  COMPLEXITY.md  Cargo.toml  DECISIONS.md  Makefile  PROGRESS.md  README.md  SUMMARY.md  x86_64-flint.json
.cargo/: config.toml
assets/: gen.py
files (1)/: 01_PRD.md  02_TECHNICAL_ARCHITECTURE.md  03_ISOLATION_AND_PRIVILEGE.md  04_CONSOLE_AND_CLI_SPEC.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  vga.rs
src/memory/: frame.rs  heap.rs  mod.rs  paging.rs
src/shell/: mod.rs
src/syscall/: mod.rs
src/task/: context.rs  mod.rs  scheduler.rs
src/user/: mod.rs  program.rs  shell_program.rs
tests/: basic_boot.rs  null_page.rs  register_dump.rs  shell.rs  stack_overflow.rs  task_stack_overflow.rs  user_mode.rs
