[package]
name = "flint"
version = "0.1.0"
edition = "2021"
authors = ["Flint"]

[[bin]]
name = "flint"
path = "src/main.rs"
test = false
bench = false

[lib]
name = "flint"
path = "src/lib.rs"

[dependencies]
bootloader = { version = "0.9.35", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.15"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
run-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
]
test-success-exit-code = 33
test-timeout = 60

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
